XWIKI-12757: Display a more user-friendly success message for Rename * Add a renameStatus.vm template that shows a summary of the rename request that has been executed and the rename log (for advanced users) after the rename operation is finished (this template will be used later to display the rename progress). * Remove from the refactoring script service the methods used to retrieve the job status as they were not working and there is a better alternative: the generic job script service. * Extract from extension.js the code that makes the extension log collapsible and auto-scroll to the end (while the job is runnning) and move it to logging.js in order to be reusable. * Modify extension history to use logging.js for collapsible/auto-scroll log. * Add a configuration option to the #hierarchy macro to be able to show the last breadcrumb element as non-active (i.e. with link) * Apply code style to rename.vm and modify it to support renameStatus.vm
(cherry picked from commit 84e4e958d1ea8428f08879f130241a50a0a55f19)

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/extension/history.css
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/extension/history.css
@@ -9,27 +9,21 @@
   margin: .5em 0;
 }
 
-.extension-history-sources-header .icon-opened,
-.extension-history-replay-log .icon-opened {
+.extension-history-sources-header .icon-opened {
   display: none;
 }
-.extension-history-sources-selector.opened .extension-history-sources-header .icon-opened,
-.extension-history-replay-log.opened .icon-opened {
+.extension-history-sources-selector.opened .extension-history-sources-header .icon-opened {
   display: inline-block;
 }
-.extension-history-sources-header .icon-closed,
-.extension-history-replay-log .icon-closed {
+.extension-history-sources-header .icon-closed {
   display: inline-block;
 }
-.extension-history-sources-selector.opened .extension-history-sources-header .icon-closed,
-.extension-history-replay-log.opened .icon-closed {
+.extension-history-sources-selector.opened .extension-history-sources-header .icon-closed {
   display: none;
 }
 
 .extension-history-sources-header .icon-opened,
-.extension-history-sources-header .icon-closed,
-.extension-history-replay-log .icon-opened,
-.extension-history-replay-log .icon-closed {
+.extension-history-sources-header .icon-closed {
   width: 10px;
 }
 
@@ -137,17 +131,6 @@ li.extension-history-record input[type="checkbox"] {
 
 .extension-history-record-status {
   margin-left: -20px;
-}
-
-.extension-history-replay-log .xHint {
-  cursor: pointer;
-}
-
-.extension-history-replay-log ul.log {
-  display: none;
-}
-.extension-history-replay-log.opened ul.log {
-  display: block;
 }
 
 /**
