--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/extensionHistory.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/extensionHistory.vm
@@ -498,7 +498,7 @@
       #displayJobProgressBar($replayJobStatus)
     #end
     <div class="extension-history-replay-log">
-      <div class="xHint">
+      <div class="collapse-toggle xHint" data-target-xpath="following-sibling::*">
         <span class="icon-closed">$services.icon.renderHTML('caret-right')</span>
         <span class="icon-opened">$services.icon.renderHTML('caret-down')</span>
         $services.localization.render('extension.history.replayStatus.replayLog')
