--- a/xwiki-platform-core/xwiki-platform-tree/xwiki-platform-tree-war/src/main/webapp/templates/tree_macros.vm
+++ b/xwiki-platform-core/xwiki-platform-tree/xwiki-platform-tree-war/src/main/webapp/templates/tree_macros.vm
@@ -49,7 +49,7 @@
     #if ($reference.startsWith('path:'))
       ## URL/Path reference
       #set ($resourceURL = $reference.substring(5))
-      #set ($resourceURL = "$resourceURL#if ($resourceURL.indexOf('?') < 0)?#else&amp;#end$escapetool.url($resourceParams)")
+      #set ($resourceURL = "$resourceURL#if ($resourceURL.indexOf('?') < 0)?#else&#end$escapetool.url($resourceParams)")
     #else
       ## Document reference
       #if ($reference.startsWith('doc:'))
@@ -58,7 +58,7 @@
       #set ($resourceParams.outputSyntax = 'plain')
       #set ($resourceURL = $xwiki.getURL($reference, 'get', $escapetool.url($resourceParams)))
     #end
-    #set ($discard = $attributes.add("data-url='$resourceURL'"))
+    #set ($discard = $attributes.add("data-url='$!escapetool.xml($resourceURL)'"))
   #end
   #set ($dragAndDrop = $macro.options.dragAndDrop == 'true')
   #set ($discard = $attributes.add("data-dragAndDrop='$dragAndDrop'"))
