--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/distribution/macros.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/distribution/macros.vm
@@ -2,18 +2,18 @@
   ## Retrieve the list of available versions for each of the features (identifiers) of the given extension.
   #set ($return = $collectionstool.orderedMap)
   #set ($features = [])
-  #set ($discard = $features.addAll($extension.features))
-  #set ($discard = $features.add($extension.id.id))
+  #set ($discard = $features.addAll($extension.extensionFeatures))
+  #set ($discard = $features.add($extension.id))
   #set ($discard = $collectionstool.reverse($features))
   #foreach ($feature in $features)
     #set ($stableVersions = [])
-    #foreach ($version in $services.extension.resolveVersions($feature, 0, -1))
+    #foreach ($version in $services.extension.resolveVersions($feature.id, 0, -1))
       #if ($version.type == 'STABLE')
         #set ($discard = $stableVersions.add($version.value))
       #end
     #end
     #set ($discard = $collectionstool.reverse($stableVersions))
-    #set ($discard = $return.put($feature, $stableVersions))
+    #set ($discard = $return.put($feature.id, $stableVersions))
   #end
   #set ($versionsByFeature = $NULL)
   #setVariable("$versionsByFeature" $return)
