--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/extension.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/extension.vm
@@ -163,7 +163,7 @@
     ## An extension that can be either upgraded or downgraded.
     ## Compare this version with the version that is currently installed to determine which button to display.
     #getInstalledExtension($extension $extensionNamespace $installedExtension)
-    #if ($extension.id.version.compareTo($installedExtension.id.version) > 0)
+    #if ($extension.compareTo($installedExtension) > 0)
       #extensionActionButtons($installedExtension 'upgrade')
     #else
       #extensionActionButtons($installedExtension 'downgrade' true)
