--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/createinline.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/createinline.vm
@@ -267,12 +267,10 @@
         #set ($deprecatedSpaceCreate = "$!request.tocreate" == 'space')
         #if (($isAdvancedUser || $isSuperAdmin) && !$deprecatedSpaceCreate)
           <dt>
-            <label for="terminal">
-              <input type="checkbox" id="terminal" name="tocreate" value="terminal" #if(!$isSpace)checked="checked"#end/>
-              $services.localization.render('core.create.terminal.label')
-              ## Hidden input used to ensure that an unchecked terminal checkbox means non-terminal and that the default is not used by mistake.
-              <input type="hidden" name="tocreate" value="nonterminal" />
-            </label>
+            <input type="checkbox" id="terminal" name="tocreate" value="terminal" #if(!$isSpace)checked="checked"#end/>
+            <label for="terminal">$services.localization.render('core.create.terminal.label')</label>
+            ## Hidden input used to ensure that an unchecked terminal checkbox means non-terminal and that the default is not used by mistake.
+            <input type="hidden" name="tocreate" value="nonterminal" />
           </dt>
           <dd>
             <span class="xHint">$services.localization.render('core.create.terminal.hint')</span>
